fix subscribe button padding on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -1228,6 +1228,8 @@ input, select, textarea {
 			button,
 			.button {
 				padding: 2px;
+				padding-left: 5px;
+				padding-right: 5px;
 			}	
 
 				input[type="submit"].icon,
